--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,38 @@
+appdirs==1.4.4
 asgiref==3.4.1
+black==21.7b0
+certifi==2021.5.30
+cffi==1.14.6
+charset-normalizer==2.0.4
+click==8.0.1
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==3.4.7
+defusedxml==0.7.1
 Django==3.2.5
+django-templated-mail==1.1.1
 djangorestframework==3.12.4
-pytz==2021.1
-sqlparse==0.4.1
+djangorestframework-simplejwt==4.7.2
+djoser==2.1.0
 gunicorn==19.9.0
+idna==3.2
+itypes==1.2.0
+Jinja2==3.0.1
+MarkupSafe==2.0.1
+mypy-extensions==0.4.3
+oauthlib==3.1.1
+pathspec==0.9.0
+pycparser==2.20
 PyJWT==1.6.4
-pytz==2018.5
+python3-openid==3.2.0
+pytz==2021.1
+regex==2021.7.6
+requests==2.26.0
+requests-oauthlib==1.3.0
+six==1.16.0
+social-auth-app-django==4.0.0
+social-auth-core==4.1.0
+sqlparse==0.4.1
+tomli==1.2.0
+uritemplate==3.0.1
+urllib3==1.26.6
